[package]
name = "validatrix"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["indexmap"] }

[[bench]]
name = "validate_benchmark"
harness = false

[dependencies]
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]
