[package]
name = "validatrix"
version = "0.3.0"
edition = "2021"
rust-version = "1.78"
description = "Composable validation library"
license = "MIT"
repository = "https://github.com/clbarnes/validatrix"
keywords = ["validation", "serde"]
categories = ["data-structures", "encoding", "parsing"]

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["indexmap"] }

[[bench]]
name = "validate_benchmark"
harness = false

[dependencies]
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]
